--- a/style.css
+++ b/style.css
@@ -11,6 +11,26 @@
     font-family: 'Barlow', sans-serif;
 }
 
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #2b2b2b;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #ffc34bc5;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: var(--main);
+}
+
 html, body {
     --main: #ffc34b;
     overflow-x: hidden;
@@ -82,6 +102,7 @@ button {
     cursor: pointer;
     font-weight: 600;
     font-size: 1.2rem;
+    color: black;
 }
 
 button:hover {
@@ -171,6 +192,15 @@ header>.main-content {
 
 .main-content>img {
     width: 400px;
+}
+
+#scroll {
+    width: 40px;
+    position: absolute;
+    left: calc(10%);
+    bottom: 0%;
+    transform: translateY(20px);
+    cursor: pointer;
 }
 
 /* Main container */
@@ -305,6 +335,10 @@ main>section {
     display: none;
 }
 
+li>b {
+    font-weight: 600;
+}
+
 /* Main section 4 */
 #section-4 {
     width: 50%;
@@ -331,7 +365,7 @@ main>section {
     border-bottom: 1px solid rgba(34, 34, 34, 0.555);
     padding: 10px 5px;
     transition: 0.4s ease-in-out;
-    color: #000000be;
+    color: #00000048;
     font-weight: 600;
 }
 
@@ -413,6 +447,10 @@ footer>span {
         width: 275px;
     }
 
+    #scroll {
+        transform: translateY(-10px);
+    }
+
     main::before {
         width: 300%;
         left: -100%;
@@ -465,6 +503,12 @@ footer>span {
 
     .main-content>img {
         width: 175px;
+    }
+
+    #scroll {
+        width: 30px;
+        left: calc(10%);
+        transform: translateY(-30px);
     }
 
     main::before {
